Fixed horizontal scroll bar issue

--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,12 @@ body {
   font-weight: 400;
   line-height: 1.6;
   background-color: #222831;
-  background-size: cover;
-  background-repeat: no-repeat;
-  min-height: 100vh; }
+  width: 100%; }
 
 .container {
   background-color: var(--color-grey-light-1);
-  display: grid;
-  width: 100vw;
   height: 100vh;
+  display: grid;
   grid-template-rows: repeat(5, 1fr); }
 
 .navigation {
