--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -35,7 +35,5 @@ body {
     font-weight: 400;
     line-height: 1.6;
     background-color: $color-primary;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 100vh;
+    width: 100%;
 }
