--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,8 +1,7 @@
 .container{
     background-color: var(--color-grey-light-1);
-    display:grid;
-    width:100vw;
     height:100vh;
+    display:grid;
     grid-template-rows: repeat(5, 1fr);
     }
 
